--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,7 +124,7 @@ main{
     margin: 30px auto;
     width: 190PX;
     height: 190px;
-    background-image: url(./assets/FOTO\ CARNET.PNG);
+    background-image: url(/assets/FOTO\ CARNET.PNG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -139,52 +139,10 @@ main{
     line-height: 25px;
     font-weight: 300;
 }
-/*-----------------------------------------------------------------------------------*/
-/*DUALBOOT-----*/
 
-main{
-    background-color: white;
-    font-family: var(--font-principal);
-}
 
-.dualboot{
-    margin: 0 auto;
-    width: 80%;
-    max-width: 980px;
-    height: auto;
-    text-align: center;
 
-    background-color: white;
-}
-
-.dualboot__title{
-    font-size: 40px;
-    padding-top: 80px;
-} 
-
-.dualboot__photo{
-    margin: 30px auto;
-    width:  190PX;
-    height: 190px;
-    background-image: url(./assets/dualboot1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-}
-
-.dualboot__text{
-    margin: 0 auto;
-    
-    text-wrap: wrap;
-    font-size: 15px;
-    line-height: 25px;
-    font-weight: 300;
-}
-
-/*-------------------------PROJECT----------------oy un estudiante de primer año de grado superior ASIXc
-            en esta web os voy a enseñar una seleccion de mis proyectos
-            espero que sea de su agrado y les pueda ser útil.------*/
+/*-------------------------PROJECT-----------------------*/
 
 .projects{
     width: 80%;
@@ -234,9 +192,7 @@ main{
     margin: 20px 0;
     text-align: justify;
 
-    padding: 0 20px;oy un estudiante de primer año de grado superior ASIXc
-    en esta web os voy a enseñar una seleccion de mis proyectos
-    espero que sea de su agrado y les pueda ser útil.
+    padding: 0 20px;
 }
 
 .btn__project{
@@ -259,16 +215,12 @@ main{
 
 footer{
     width: 100%;
-    height: 110px;
-    margin-top: -50px;
+    height: 125px;
     color: var(--font-color);
     font: 15px var(--font-principal);
     text-align: center;
     align-content: center;
 }
-
-
-
 
 /*MEDIAQ------------------*/
 
@@ -281,8 +233,7 @@ footer{
     .hero__subtitle {
         font-size: 15px;
     }
-
-    /* Adjust Navigation links */
+/* Adjust Navigation links */
     .nav {
         gap: 10px;
     }
@@ -348,51 +299,7 @@ footer{
         height: 150px;
     }
 
-    /* Footer *//*MEDIAQ------------------*/
-
-@media(max-width:1300px) {
-    .hero__name{
-        font-size: 50px;
-    }
-    .hero__subtitle{
-        font-size: 15px;
-    }
-
-    /*------------*/
-    .tech{
-        flex-wrap: wrap;
-    }
- 
-    .tech__item__title{
-        margin-top: 50px;
-    }
-  
-}
-
-@media(max-width:450px){
-    .hero__name{
-        text-align: center;
-        font-size: 45px;
-    }
-
-    .hero__subtitle{
-        font-size: 12px;
-    }
-}
-
-@media(max-width:1185px){
-    .itemPro{
-        margin: 30px auto;
-
-        flex-direction: column;
-        width: auto;
-        gap: 25px;
-    }
-
-    .img__project{
-        width: 100%;
-    }
-}
+    /* Footer */
     footer {
         height: 100px;
     }
