--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,7 +124,7 @@ main{
     margin: 30px auto;
     width: 190PX;
     height: 190px;
-    background-image: url(./assets/FOTO\ CARNET.PNG);
+    background-image: url(./assets/fotocarnet.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
