--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,7 +277,13 @@ footer{
     .hero__subtitle {
         font-size: 14px;
     }
-
+/* Estilo del contador de visitas */
+.visit-counter {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+    margin-top: 20px;
+  }
     /* Navigation links resizing */
     .nav__l {
         font-size: 18px;
